fix: fix modal not properly displayed when overflowed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -75,3 +75,20 @@
     font-family: "Geist Sans", sans-serif;
   }
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-secondary;
+  @apply rounded-sm;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-muted-foreground
+}
